# CZASOINATOR

./: LICENSE  README.md  config.ini  main.py  pyproject.toml  readme.md  requirements.txt
cache/: days_off.cache
config/: config.ini  setup_config_and_connection.py
database/: setup_db.py
helpers/: colors.py  convert_float.py  error_handler.py  exit_handler.py  get_today_or_yesterday.py  greet_user.py  options.py
modules/: add_work_to_redmine.py  days_off.py  issue_stopwatch.py  show_today_or_yesterday_work.py  show_work.py  stats.py
